[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# framework
dotenv = "0.15.0"
itertools = "0.10.5"
pico-args = "0.5.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
# for solving
